--- a/popup/rotate_options.html
+++ b/popup/rotate_options.html
@@ -13,9 +13,13 @@
     <form>
         <input type="checkbox" id="rotationDirection" name="rotationDirection">
         <label for="rotationDirection">Rotate clockwise</label>
-        <br><br>
-        <p id="savedPrompt">Not Saved</p>
-        <button type="submit">Save</button>
+        <p id="loadedP">Not Loaded</p>
+        <div>
+            <p>
+                <button type="submit">Save</button>
+            </p>
+            <p id="savedPrompt">Not Saved</p>
+        </div>
     </form>
 
 
