--- a/popup/rotate_options.html
+++ b/popup/rotate_options.html
@@ -20,7 +20,9 @@
             <p>Use with care <b>&#60</b><b>3</b></p>
             <input type="checkbox" id="rotationDirection" name="rotationDirection">
             <label for="rotationDirection">Rotate clockwise</label>
-            <!-- <p id="loadedP"></p> -->
+            <br>
+            <input type="checkbox" id="rotateAll" name="rotateAll" disabled>
+            <label for="rotateAll">Rotate all images <br>(Coming soon)</label>
             <div>
                 <p>
                     <button id="clockwiseSaveButton" type="submit">Save</button>
