--- a/src/popup/rotate_options.html
+++ b/src/popup/rotate_options.html
@@ -15,16 +15,11 @@
 
     <div id="settingsWindow">
         <form>
-            <p>RotateMe</p>
-            <p>Press 'Shift+R' to rotate</p>
-            <p>Use with care <b>&#60</b><b>3</b></p>
-            <input type="checkbox" id="rotationDirection" name="rotationDirection">
-            <label for="rotationDirection">Rotate clockwise</label>
-            <br>
-            <div>
-                <p>
-                    <button id="clockwiseSaveButton" type="submit">Save</button>
-                </p>
+            <div id="rotateMeContainer" class="_container">
+                <h4>Rotate me</h4>
+                <p>Press 'Shift+R' to rotate</p>
+                <input type="checkbox" id="rotateClockwiseCheckbox" name="rotationDirection">
+                <label for="rotationDirection">Rotate clockwise?</label>
             </div>
         </form>
     </div>
